--- a/notebooks/ResNet-50.ipynb
+++ b/notebooks/ResNet-50.ipynb
@@ -10,59 +10,114 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt \n",
-    "from tensorflow import keras\n",
-    "from keras import models, layers, optimizers\n",
-    "from src.data_loader import X,Y \n",
-    "from src.preprocessor import data_preprocessing\n",
     "\n",
-    "generator, val_data, test_data = data_preprocessing(X,Y) \n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow import keras\n",
+    "from keras import layers\n",
+    "\n",
+    "from src.prepare_raw_data import X, Y\n",
+    "from src.prepare_dataset import data_preprocessing\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# DATA PREPARATION\n",
+    "# =========================\n",
+    "# Perform full preprocessing pipeline:\n",
+    "# - train/val/test split\n",
+    "# - resizing, normalization\n",
+    "# - data augmentation (train only)\n",
+    "train_generator, val_data, test_data = data_preprocessing(X, Y)\n",
+    "\n",
     "X_val, Y_val = val_data\n",
     "X_test, Y_test = test_data\n",
     "\n",
     "\n",
+    "# =========================\n",
+    "# OPTIMIZER CONFIGURATION\n",
+    "# =========================\n",
+    "# Adam optimizer with fixed learning rate for baseline comparison\n",
     "optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
     "\n",
     "\n",
-    "#definition of residual_unit\n",
+    "# =========================\n",
+    "# BASE MODEL (TRANSFER LEARNING)\n",
+    "# =========================\n",
+    "# Load pretrained ResNet50 without the classification head\n",
     "base_model = keras.applications.ResNet50(\n",
-    "    include_top = False, \n",
+    "    include_top=False,\n",
     "    weights=\"imagenet\",\n",
-    "    input_shape= (224,224,3))\n",
+    "    input_shape=(224, 224, 3)\n",
+    ")\n",
     "\n",
-    "base_model.trainable = False \n",
+    "# Freeze all convolutional layers to use ResNet as a fixed feature extractor\n",
+    "base_model.trainable = False\n",
     "\n",
-    "#definition of classification head \n",
+    "\n",
+    "# =========================\n",
+    "# CLASSIFICATION HEAD\n",
+    "# =========================\n",
+    "# Custom classification head on top of the pretrained backbone\n",
     "inputs = base_model.input\n",
-    "base_model_output = base_model.output\n",
-    "pooling = keras.layers.GlobalAveragePooling2D()(base_model_output )\n",
-    "dropout = keras.layers.Dropout(0.3)(pooling) \n",
-    "outputs = keras.layers.Dense(101, activation=\"softmax\")(dropout)\n",
+    "x = base_model.output\n",
     "\n",
+    "# Global Average Pooling reduces spatial dimensions\n",
+    "x = keras.layers.GlobalAveragePooling2D()(x)\n",
+    "\n",
+    "# Dropout for regularization\n",
+    "x = keras.layers.Dropout(0.3)(x)\n",
+    "\n",
+    "# Final classification layer\n",
+    "outputs = keras.layers.Dense(101, activation=\"softmax\")(x)\n",
+    "\n",
+    "# Build the full model\n",
     "model = keras.models.Model(inputs=inputs, outputs=outputs)\n",
     "\n",
     "\n",
-    "model.compile(loss=\"categorical_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\n",
+    "# =========================\n",
+    "# MODEL COMPILATION\n",
+    "# =========================\n",
+    "model.compile(\n",
+    "    loss=\"categorical_crossentropy\",\n",
+    "    optimizer=optimizer,\n",
+    "    metrics=[\"accuracy\"]\n",
+    ")\n",
     "\n",
-    "history = model.fit(generator, epochs=10, validation_data = (X_val, Y_val) ) \n",
     "\n",
-    "train_acc = history.history['accuracy']\n",
-    "val_acc = history.history['val_accuracy']\n",
+    "# =========================\n",
+    "# TRAINING\n",
+    "# =========================\n",
+    "# Train only the classification head while keeping the backbone frozen\n",
+    "history = model.fit(\n",
+    "    train_generator,\n",
+    "    epochs=10,\n",
+    "    validation_data=(X_val, Y_val)\n",
+    ")\n",
     "\n",
+    "\n",
+    "# =========================\n",
+    "# EVALUATION\n",
+    "# =========================\n",
+    "# Evaluate model performance on unseen test data\n",
     "model.evaluate(X_test, Y_test)\n",
     "\n",
-    "\n",
+    "# Display model architecture summary\n",
     "model.summary()\n",
     "\n",
     "\n",
-    "plt.plot(train_acc, label=\"Trening\")\n",
-    "plt.plot(val_acc, label = \"Validation\")\n",
-    "plt.xlabel(\"epoch\")\n",
-    "plt.ylabel(\"accuracy\")\n",
-    "plt.title(\"Learning curve\")\n",
+    "# =========================\n",
+    "# LEARNING CURVES\n",
+    "# =========================\n",
+    "# Plot training and validation accuracy\n",
+    "train_acc = history.history[\"accuracy\"]\n",
+    "val_acc = history.history[\"val_accuracy\"]\n",
+    "\n",
+    "plt.plot(train_acc, label=\"Training\")\n",
+    "plt.plot(val_acc, label=\"Validation\")\n",
+    "plt.xlabel(\"Epoch\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.title(\"Learning Curve – ResNet50 Baseline\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()\n",
