--- a/notebooks/model_from_scratch.ipynb
+++ b/notebooks/model_from_scratch.ipynb
@@ -18,6 +18,7 @@
     "from keras import models, layers, optimizers\n",
     "from src.prepare_raw_data import X,Y\n",
     "from src.prepare_dataset import data_preprocessing\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
     "model_path = \"model_CNN.h5\"\n",
     "\n",
@@ -108,6 +109,16 @@
     "    X_val, Y_val = val_data\n",
     "    X_test, Y_test = test_data\n",
     "\n",
+    "    val_data_gen = ImageDataGenerator()  \n",
+    "\n",
+    "    val_generator = val_data_gen.flow(\n",
+    "        X_val,\n",
+    "        Y_val,\n",
+    "        batch_size=32,\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "\n",
+    "\n",
     "    optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
     "\n",
     "    # =========================\n",
@@ -170,7 +181,7 @@
     "    history = model.fit(\n",
     "        train_generator,\n",
     "        epochs=10,\n",
-    "        validation_data=(X_val, Y_val)\n",
+    "        validation_data=val_generator \n",
     "    )\n",
     "\n",
     "    # =========================\n",
@@ -185,14 +196,28 @@
     "    # =========================\n",
     "    # LEARNING CURVES\n",
     "    # =========================\n",
-    "    plt.plot(history.history[\"accuracy\"], label=\"Training\")\n",
-    "    plt.plot(history.history[\"val_accuracy\"], label=\"Validation\")\n",
-    "    plt.xlabel(\"Epochs\")\n",
-    "    plt.ylabel(\"Accuracy\")\n",
-    "    plt.title(\"Learning Curve – Custom ResNet\")\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.show()"
+    "    fig, ax1 = plt.subplots()\n",
+    "\n",
+    "    color = 'tab:blue'\n",
+    "    ax1.set_xlabel('Epoch')\n",
+    "    ax1.set_ylabel('Accuracy', color=color)\n",
+    "    ax1.plot(history.history[\"accuracy\"], label=\"Train Acc\", color='tab:blue')\n",
+    "    ax1.plot(history.history[\"val_accuracy\"], label=\"Val Acc\", color='tab:cyan')\n",
+    "    ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "    ax2 = ax1.twinx()  \n",
+    "    color = 'tab:red'\n",
+    "    ax2.set_ylabel('Loss', color=color)\n",
+    "    ax2.plot(history.history[\"loss\"], label=\"Train Loss\", color='tab:red')\n",
+    "    ax2.plot(history.history[\"val_loss\"], label=\"Val Loss\", color='tab:orange')\n",
+    "    ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    plt.title(\"Learning Curve – ResNet50 Baseline\")\n",
+    "    fig.legend(loc=\"upper right\", bbox_to_anchor=(1,1), bbox_transform=ax1.transAxes)\n",
+    "    plt.show()\n",
+    "\n",
+    "    "
    ]
   }
  ],
