--- a/notebooks/ResNet-50.ipynb
+++ b/notebooks/ResNet-50.ipynb
@@ -10,15 +10,14 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
-    "\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow import keras\n",
     "from keras import layers\n",
-    "\n",
     "from src.prepare_raw_data import X, Y\n",
     "from src.prepare_dataset import data_preprocessing\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
     "\n",
     "# =========================\n",
@@ -32,6 +31,15 @@
     "\n",
     "X_val, Y_val = val_data\n",
     "X_test, Y_test = test_data\n",
+    "\n",
+    "val_data_gen = ImageDataGenerator()  \n",
+    "\n",
+    "val_generator = val_data_gen.flow(\n",
+    "    X_val,\n",
+    "    Y_val,\n",
+    "    batch_size=32,\n",
+    "    shuffle=False\n",
+    ")\n",
     "\n",
     "\n",
     "# =========================\n",
@@ -92,7 +100,7 @@
     "history = model.fit(\n",
     "    train_generator,\n",
     "    epochs=10,\n",
-    "    validation_data=(X_val, Y_val)\n",
+    "    validation_data=val_generator \n",
     ")\n",
     "\n",
     "\n",
@@ -109,17 +117,25 @@
     "# =========================\n",
     "# LEARNING CURVES\n",
     "# =========================\n",
-    "# Plot training and validation accuracy\n",
-    "train_acc = history.history[\"accuracy\"]\n",
-    "val_acc = history.history[\"val_accuracy\"]\n",
+    "fig, ax1 = plt.subplots()\n",
     "\n",
-    "plt.plot(train_acc, label=\"Training\")\n",
-    "plt.plot(val_acc, label=\"Validation\")\n",
-    "plt.xlabel(\"Epoch\")\n",
-    "plt.ylabel(\"Accuracy\")\n",
+    "color = 'tab:blue'\n",
+    "ax1.set_xlabel('Epoch')\n",
+    "ax1.set_ylabel('Accuracy', color=color)\n",
+    "ax1.plot(history.history[\"accuracy\"], label=\"Train Acc\", color='tab:blue')\n",
+    "ax1.plot(history.history[\"val_accuracy\"], label=\"Val Acc\", color='tab:cyan')\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "ax2 = ax1.twinx()  \n",
+    "color = 'tab:red'\n",
+    "ax2.set_ylabel('Loss', color=color)\n",
+    "ax2.plot(history.history[\"loss\"], label=\"Train Loss\", color='tab:red')\n",
+    "ax2.plot(history.history[\"val_loss\"], label=\"Val Loss\", color='tab:orange')\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "fig.tight_layout()\n",
     "plt.title(\"Learning Curve – ResNet50 Baseline\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "fig.legend(loc=\"upper right\", bbox_to_anchor=(1,1), bbox_transform=ax1.transAxes)\n",
     "plt.show()\n",
     "\n"
    ]
