--- a/notebooks/prepare_raw_data.ipynb
+++ b/notebooks/prepare_raw_data.ipynb
@@ -27,7 +27,7 @@
     "# =========================\n",
     "# DATA INGESTION / EXTRACTION\n",
     "# =========================\n",
-    "def unzip_function(path: str, base: str) -> str:\n",
+    "def unzip_function(path, base):\n",
     "    \"\"\"\n",
     "    Unzip the dataset ZIP file into 'data/kaggle_dataset'.\n",
     "    \n",
