--- a/notebooks/model_from_scratch.ipynb
+++ b/notebooks/model_from_scratch.ipynb
@@ -10,19 +10,26 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow import keras\n",
-    "from keras import models, layers, optimizers\n",
-    "from src.prepare_raw_data import X,Y\n",
-    "from src.prepare_dataset import data_preprocessing\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "model_path = \"model_CNN.h5\"\n",
+    "from src.data_pipeline import DataPipeline\n",
+    "\n",
+    "# --- Configuration ---\n",
+    "MODEL_PATH = \"models/steel_resnet_custom.h5\"\n",
+    "ZIP_PATH = \"data/dataset.zip\"\n",
+    "EXTRACT_PATH = \"data/steel_data\"\n",
+    "IMG_SIZE = (200, 200)\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS = 20\n",
+    "NUM_CLASSES = 6\n",
     "\n",
     "\n",
+    "# --- Residual Block ---\n",
     "class ResidualBlock(keras.layers.Layer):\n",
     "    \"\"\"\n",
     "    Custom residual block implementing skip connections as used in ResNet architectures.\n",
@@ -54,8 +61,7 @@
     "            keras.layers.BatchNormalization()\n",
     "        ])\n",
     "\n",
-    "        # Skip connection\n",
-    "        # Projection shortcut is used when spatial dimensions change\n",
+    "        # Skip connection (projection shortcut if dimensions change)\n",
     "        if strides > 1:\n",
     "            self.skip_layers = keras.Sequential([\n",
     "                keras.layers.Conv2D(\n",
@@ -74,150 +80,120 @@
     "    def call(self, inputs):\n",
     "        \"\"\"\n",
     "        Forward pass for the residual block.\n",
-    "\n",
-    "        Args:\n",
-    "            inputs (Tensor): Input tensor.\n",
-    "\n",
-    "        Returns:\n",
-    "            Tensor: Output tensor after applying residual connection.\n",
     "        \"\"\"\n",
     "        x = self.main_layers(inputs)\n",
     "        skip = self.skip_layers(inputs)\n",
-    "\n",
-    "        # Element-wise addition of main path and skip connection\n",
     "        return self.activation(x + skip)\n",
     "\n",
-    "   \n",
-    "# =========================\n",
-    "# MODEL LOADING OR TRAINING\n",
-    "# =========================\n",
     "\n",
-    "if os.path.exists(model_path):\n",
-    "    # Load previously trained model with custom residual blocks\n",
-    "    model = keras.models.load_model(\n",
-    "        model_path,\n",
-    "        custom_objects={\"ResidualBlock\": ResidualBlock}\n",
-    "    )\n",
-    "    print(\"Model loaded successfully\")\n",
+    "# --- Custom ResNet Builder ---\n",
+    "def build_custom_resnet(input_shape, num_classes):\n",
+    "    \"\"\"\n",
+    "    Builds a ResNet-34 style architecture using the custom ResidualBlock.\n",
+    "    \"\"\"\n",
+    "    inputs = keras.Input(shape=input_shape)\n",
     "\n",
-    "else:\n",
-    "    # =========================\n",
-    "    # DATA PREPARATION\n",
-    "    # =========================\n",
-    "    train_generator, val_data, test_data = data_preprocessing(X, Y)\n",
+    "    # Stem\n",
+    "    x = keras.layers.Conv2D(\n",
+    "        64, kernel_size=7, strides=2, padding=\"same\", use_bias=False\n",
+    "    )(inputs)\n",
+    "    x = keras.layers.BatchNormalization()(x)\n",
+    "    x = keras.layers.Activation(\"relu\")(x)\n",
+    "    x = keras.layers.MaxPooling2D(pool_size=3, strides=2, padding=\"same\")(x)\n",
     "\n",
-    "    X_val, Y_val = val_data\n",
-    "    X_test, Y_test = test_data\n",
-    "\n",
-    "    val_data_gen = ImageDataGenerator()  \n",
-    "\n",
-    "    val_generator = val_data_gen.flow(\n",
-    "        X_val,\n",
-    "        Y_val,\n",
-    "        batch_size=32,\n",
-    "        shuffle=False\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "    optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
-    "\n",
-    "    # =========================\n",
-    "    # MODEL DEFINITION\n",
-    "    # =========================\n",
-    "    model = keras.models.Sequential()\n",
-    "\n",
-    "    # Initial convolution block (as in original ResNet)\n",
-    "    model.add(\n",
-    "        keras.layers.Conv2D(\n",
-    "            filters=64,\n",
-    "            kernel_size=7,\n",
-    "            strides=2,\n",
-    "            padding=\"same\",\n",
-    "            use_bias=False,\n",
-    "            input_shape=(224, 224, 3)\n",
-    "        )\n",
-    "    )\n",
-    "    model.add(keras.layers.BatchNormalization())\n",
-    "    model.add(keras.layers.Activation(\"relu\"))\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=3, strides=2, padding=\"same\"))\n",
-    "\n",
-    "    # =========================\n",
-    "    # RESIDUAL BLOCK STACK\n",
-    "    # ResNet-34 style: 3-4-6-3\n",
-    "    # =========================\n",
-    "    prev_filters = 64\n",
-    "\n",
-    "    Res_config = [\n",
-    "    (64, 3),\n",
-    "    (128, 4),\n",
-    "    (256, 6),\n",
-    "    (512, 3),\n",
+    "    # ResNet-34 configuration: (filters, number_of_blocks)\n",
+    "    res_config = [\n",
+    "        (64, 3),\n",
+    "        (128, 4),\n",
+    "        (256, 6),\n",
+    "        (512, 3),\n",
     "    ]\n",
-    "    \n",
-    "    for filters, blocks in Res_config:\n",
-    "        for block in range(blocks):\n",
-    "            strides = 2 if block == 0 and filters != prev_filters else 1\n",
-    "            model.add(ResidualBlock(filters, strides=strides))\n",
+    "\n",
+    "    prev_filters = 64\n",
+    "    for filters, blocks in res_config:\n",
+    "        for block_idx in range(blocks):\n",
+    "            # Downsample at the start of each new stage (except first)\n",
+    "            strides = 2 if block_idx == 0 and filters != prev_filters else 1\n",
+    "            x = ResidualBlock(filters, strides=strides)(x)\n",
     "            prev_filters = filters\n",
     "\n",
-    "    # =========================\n",
-    "    # CLASSIFICATION HEAD\n",
-    "    # =========================\n",
-    "    model.add(keras.layers.GlobalAveragePooling2D())\n",
-    "    model.add(keras.layers.Dense(101, activation=\"softmax\"))\n",
+    "    # Classification head\n",
+    "    x = keras.layers.GlobalAveragePooling2D()(x)\n",
+    "    outputs = keras.layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "\n",
-    "    # =========================\n",
-    "    # COMPILATION\n",
-    "    # =========================\n",
-    "    model.compile(\n",
-    "        optimizer=optimizer,\n",
-    "        loss=\"categorical_crossentropy\",\n",
-    "        metrics=[\"accuracy\"]\n",
+    "    model = keras.Model(inputs, outputs, name=\"Custom_ResNet_Steel\")\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "# --- Main Execution ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # 1. Data pipeline\n",
+    "    pipeline = DataPipeline(\n",
+    "        ZIP_PATH,\n",
+    "        EXTRACT_PATH,\n",
+    "        img_size=IMG_SIZE,\n",
+    "        batch_size=BATCH_SIZE\n",
     "    )\n",
+    "    train_data, val_data, test_data = pipeline.running_engine()\n",
     "\n",
-    "    # =========================\n",
-    "    # TRAINING\n",
-    "    # =========================\n",
+    "    # 2. Model initialization\n",
+    "    if os.path.exists(MODEL_PATH):\n",
+    "        print(f\"Loading existing model from {MODEL_PATH}...\")\n",
+    "        model = keras.models.load_model(\n",
+    "            MODEL_PATH,\n",
+    "            custom_objects={\"ResidualBlock\": ResidualBlock}\n",
+    "        )\n",
+    "    else:\n",
+    "        print(\"Creating new Custom ResNet model...\")\n",
+    "        model = build_custom_resnet(\n",
+    "            input_shape=(*IMG_SIZE, 3),\n",
+    "            num_classes=NUM_CLASSES\n",
+    "        )\n",
+    "        optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
+    "        model.compile(\n",
+    "            optimizer=optimizer,\n",
+    "            loss=\"categorical_crossentropy\",\n",
+    "            metrics=[\"accuracy\"]\n",
+    "        )\n",
+    "\n",
+    "    # 3. Training\n",
+    "    print(\"Starting training...\")\n",
     "    history = model.fit(\n",
-    "        train_generator,\n",
-    "        epochs=10,\n",
-    "        validation_data=val_generator \n",
+    "        train_data,\n",
+    "        epochs=EPOCHS,\n",
+    "        validation_data=val_data\n",
     "    )\n",
     "\n",
-    "    # =========================\n",
-    "    # EVALUATION\n",
-    "    # =========================\n",
-    "    loss, accuracy = model.evaluate(X_test, Y_test)\n",
-    "    print(f\"Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
+    "    # 4. Evaluation\n",
+    "    print(\"\\nEvaluating on Test Set...\")\n",
+    "    loss, accuracy = model.evaluate(test_data)\n",
+    "    print(f\"Test Loss: {loss:.4f}, Test Accuracy: {accuracy:.4f}\")\n",
     "\n",
-    "    model.summary()\n",
-    "    model.save(model_path)\n",
+    "    # 5. Save model\n",
+    "    os.makedirs(\"models\", exist_ok=True)\n",
+    "    model.save(MODEL_PATH)\n",
+    "    print(f\"Model saved to {MODEL_PATH}\")\n",
     "\n",
-    "    # =========================\n",
-    "    # LEARNING CURVES\n",
-    "    # =========================\n",
-    "    fig, ax1 = plt.subplots()\n",
+    "    # 6. Training curves visualization\n",
+    "    fig, ax1 = plt.subplots(figsize=(10, 6))\n",
     "\n",
-    "    color = 'tab:blue'\n",
-    "    ax1.set_xlabel('Epoch')\n",
-    "    ax1.set_ylabel('Accuracy', color=color)\n",
-    "    ax1.plot(history.history[\"accuracy\"], label=\"Train Acc\", color='tab:blue')\n",
-    "    ax1.plot(history.history[\"val_accuracy\"], label=\"Val Acc\", color='tab:cyan')\n",
-    "    ax1.tick_params(axis='y', labelcolor=color)\n",
+    "    ax1.set_xlabel(\"Epoch\")\n",
+    "    ax1.set_ylabel(\"Accuracy\", color=\"tab:blue\")\n",
+    "    ax1.plot(history.history[\"accuracy\"], label=\"Train Acc\", color=\"tab:blue\", linewidth=2)\n",
+    "    ax1.plot(history.history[\"val_accuracy\"], label=\"Val Acc\", color=\"tab:cyan\", linestyle=\"--\")\n",
+    "    ax1.tick_params(axis=\"y\", labelcolor=\"tab:blue\")\n",
     "\n",
-    "    ax2 = ax1.twinx()  \n",
-    "    color = 'tab:red'\n",
-    "    ax2.set_ylabel('Loss', color=color)\n",
-    "    ax2.plot(history.history[\"loss\"], label=\"Train Loss\", color='tab:red')\n",
-    "    ax2.plot(history.history[\"val_loss\"], label=\"Val Loss\", color='tab:orange')\n",
-    "    ax2.tick_params(axis='y', labelcolor=color)\n",
+    "    ax2 = ax1.twinx()\n",
+    "    ax2.set_ylabel(\"Loss\", color=\"tab:red\")\n",
+    "    ax2.plot(history.history[\"loss\"], label=\"Train Loss\", color=\"tab:red\", alpha=0.5)\n",
+    "    ax2.plot(history.history[\"val_loss\"], label=\"Val Loss\", color=\"tab:orange\", linestyle=\"--\")\n",
+    "    ax2.tick_params(axis=\"y\", labelcolor=\"tab:red\")\n",
     "\n",
-    "    fig.tight_layout()\n",
-    "    plt.title(\"Learning Curve – ResNet50 Baseline\")\n",
-    "    fig.legend(loc=\"upper right\", bbox_to_anchor=(1,1), bbox_transform=ax1.transAxes)\n",
-    "    plt.show()\n",
-    "\n",
-    "    "
+    "    plt.title(\"Steel Defect Detection: Custom ResNet Training History\")\n",
+    "    fig.legend(loc=\"upper right\", bbox_to_anchor=(0.9, 0.9))\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ]
   }
  ],
