--- a/notebooks/model_from_scratch.ipynb
+++ b/notebooks/model_from_scratch.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "        self.activation = keras.layers.Activation(activation)\n",
     "\n",
-    "        # Main convolutional path\n",
+    "        # ---Main convolutional path ---\n",
     "        self.main_layers = keras.Sequential([\n",
     "            keras.layers.Conv2D(\n",
     "                filters,\n",
@@ -61,8 +61,8 @@
     "            keras.layers.BatchNormalization()\n",
     "        ])\n",
     "\n",
-    "        # Skip connection (projection shortcut if dimensions change)\n",
-    "        if strides > 1:\n",
+    "        # --- Skip connection (projection shortcut if dimensions change) ---\n",
+    "        if strides > 1: \n",
     "            self.skip_layers = keras.Sequential([\n",
     "                keras.layers.Conv2D(\n",
     "                    filters,\n",
@@ -74,7 +74,7 @@
     "                keras.layers.BatchNormalization()\n",
     "            ])\n",
     "        else:\n",
-    "            # Identity mapping\n",
+    "            # --- Identity mapping ---\n",
     "            self.skip_layers = keras.layers.Activation(\"linear\")\n",
     "\n",
     "    def call(self, inputs):\n",
@@ -101,7 +101,7 @@
     "    x = keras.layers.Activation(\"relu\")(x)\n",
     "    x = keras.layers.MaxPooling2D(pool_size=3, strides=2, padding=\"same\")(x)\n",
     "\n",
-    "    # ResNet-34 configuration: (filters, number_of_blocks)\n",
+    "    # --- ResNet-34 configuration: (filters, number_of_blocks) ---\n",
     "    res_config = [\n",
     "        (64, 3),\n",
     "        (128, 4),\n",
@@ -117,7 +117,7 @@
     "            x = ResidualBlock(filters, strides=strides)(x)\n",
     "            prev_filters = filters\n",
     "\n",
-    "    # Classification head\n",
+    "    # --- Classification head ---\n",
     "    x = keras.layers.GlobalAveragePooling2D()(x)\n",
     "    outputs = keras.layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "\n",
@@ -136,7 +136,7 @@
     "    )\n",
     "    train_data, val_data, test_data = pipeline.running_engine()\n",
     "\n",
-    "    # 2. Model initialization\n",
+    "    # --- 2. Model initialization ---\n",
     "    if os.path.exists(MODEL_PATH):\n",
     "        print(f\"Loading existing model from {MODEL_PATH}...\")\n",
     "        model = keras.models.load_model(\n",
@@ -156,7 +156,7 @@
     "            metrics=[\"accuracy\"]\n",
     "        )\n",
     "\n",
-    "    # 3. Training\n",
+    "    # --- 3. Training ---\n",
     "    print(\"Starting training...\")\n",
     "    history = model.fit(\n",
     "        train_data,\n",
@@ -164,17 +164,17 @@
     "        validation_data=val_data\n",
     "    )\n",
     "\n",
-    "    # 4. Evaluation\n",
+    "    # --- 4. Evaluation ---\n",
     "    print(\"\\nEvaluating on Test Set...\")\n",
     "    loss, accuracy = model.evaluate(test_data)\n",
     "    print(f\"Test Loss: {loss:.4f}, Test Accuracy: {accuracy:.4f}\")\n",
     "\n",
-    "    # 5. Save model\n",
+    "    # --- 5. Save model ---\n",
     "    os.makedirs(\"models\", exist_ok=True)\n",
     "    model.save(MODEL_PATH)\n",
     "    print(f\"Model saved to {MODEL_PATH}\")\n",
     "\n",
-    "    # 6. Training curves visualization\n",
+    "    # --- 6. Training curves visualization ---\n",
     "    fig, ax1 = plt.subplots(figsize=(10, 6))\n",
     "\n",
     "    ax1.set_xlabel(\"Epoch\")\n",
