--- a/notebooks/model_from_scratch.ipynb
+++ b/notebooks/model_from_scratch.ipynb
@@ -149,9 +149,9 @@
     "            input_shape=(*IMG_SIZE, 3),\n",
     "            num_classes=NUM_CLASSES\n",
     "        )\n",
-    "        optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
+    "        model.summary()\n",
     "        model.compile(\n",
-    "            optimizer=optimizer,\n",
+    "            optimizer=keras.optimizers.Adam(learning_rate=0.001),\n",
     "            loss=\"categorical_crossentropy\",\n",
     "            metrics=[\"accuracy\"]\n",
     "        )\n",
