--- a/notebooks/ResNet-50.ipynb
+++ b/notebooks/ResNet-50.ipynb
@@ -2,142 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c2ffe0b-acfe-47cd-892b-b4ab2a8201f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2075701824.py, line 73)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 73\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"Starting training...\")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
+    "\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow import keras\n",
-    "from keras import layers\n",
-    "from src.prepare_raw_data import X, Y\n",
-    "from src.prepare_dataset import data_preprocessing\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "from src.data_pipeline import DataPipeline\n",
+    "\n",
+    "# --- Configuration ---\n",
+    "MODEL_PATH = \"models/steel_resnet50.h5\"\n",
+    "ZIP_PATH = \"data/dataset.zip\"\n",
+    "EXTRACT_PATH = \"data/steel_data\"\n",
+    "IMG_SIZE = (200, 200)\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS = 20\n",
+    "NUM_CLASSES = 6\n",
     "\n",
     "\n",
-    "# =========================\n",
-    "# DATA PREPARATION\n",
-    "# =========================\n",
-    "# Perform full preprocessing pipeline:\n",
-    "# - train/val/test split\n",
-    "# - resizing, normalization\n",
-    "# - data augmentation (train only)\n",
-    "train_generator, val_data, test_data = data_preprocessing(X, Y)\n",
+    "# --- ResNet-50 Builder ---\n",
+    "def build_resnet50(input_shape, num_classes):\n",
+    "    # Base model (pretrained)\n",
+    "    base_model = keras.applications.ResNet50(\n",
+    "        include_top=False,\n",
+    "        weights=\"imagenet\",\n",
+    "        input_shape=input_shape\n",
+    "    )\n",
     "\n",
-    "X_val, Y_val = val_data\n",
-    "X_test, Y_test = test_data\n",
+    "    # --- Freeze convolutional layers ---\n",
+    "    base_model.trainable = False\n",
     "\n",
-    "val_data_gen = ImageDataGenerator()  \n",
+    "    # --- Classification head ---\n",
+    "    inputs = base_model.input\n",
+    "    x = base_model.output\n",
+    "    x = keras.layers.GlobalAveragePooling2D()(x)\n",
+    "    x = keras.layers.Dropout(0.3)(x)\n",
+    "    outputs = keras.layers.Dense(num_classes, activation=\"softmax\")(x)\n",
     "\n",
-    "val_generator = val_data_gen.flow(\n",
-    "    X_val,\n",
-    "    Y_val,\n",
-    "    batch_size=32,\n",
-    "    shuffle=False\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# =========================\n",
-    "# OPTIMIZER CONFIGURATION\n",
-    "# =========================\n",
-    "# Adam optimizer with fixed learning rate for baseline comparison\n",
-    "optimizer = keras.optimizers.Adam(learning_rate=0.001)\n",
+    "    model = keras.Model(inputs, outputs)\n",
+    "    return model\n",
     "\n",
     "\n",
-    "# =========================\n",
-    "# BASE MODEL (TRANSFER LEARNING)\n",
-    "# =========================\n",
-    "# Load pretrained ResNet50 without the classification head\n",
-    "base_model = keras.applications.ResNet50(\n",
-    "    include_top=False,\n",
-    "    weights=\"imagenet\",\n",
-    "    input_shape=(224, 224, 3)\n",
-    ")\n",
+    "if __name__ == \"__main__\":\n",
+    "    # --- 1. Data Pipeline ---\n",
+    "    pipeline = DataPipeline(\n",
+    "        ZIP_PATH,\n",
+    "        EXTRACT_PATH,\n",
+    "        img_size=IMG_SIZE,\n",
+    "        batch_size=BATCH_SIZE\n",
+    "    )\n",
+    "    train_data, val_data, test_data = pipeline.running_engine()\n",
     "\n",
-    "# Freeze all convolutional layers to use ResNet as a fixed feature extractor\n",
-    "base_model.trainable = False\n",
+    "    # --- 2. Model initialization ---\n",
+    "    if os.path.exists(MODEL_PATH):\n",
+    "        print(f\"Loading existing model from {MODEL_PATH}...\")\n",
+    "        model = keras.models.load_model(MODEL_PATH)\n",
+    "    else:\n",
+    "        print(\"Creating new ResNet-50 transfer learning model...\")\n",
+    "        model = build_resnet50(\n",
+    "            input_shape=(*IMG_SIZE, 3),\n",
+    "            num_classes=NUM_CLASSES\n",
+    "        )\n",
+    "        model.summary()\n",
+    "        model.compile(\n",
+    "            optimizer=keras.optimizers.Adam(learning_rate=0.001),\n",
+    "            loss=\"categorical_crossentropy\",\n",
+    "            metrics=[\"accuracy\"]\n",
+    "        )\n",
     "\n",
+    "    # --- 3. Training ---\n",
+    "    print(\"Starting training...\")\n",
+    "    history = model.fit(\n",
+    "        train_data,\n",
+    "        epochs=EPOCHS,\n",
+    "        validation_data=val_data\n",
+    "    )\n",
     "\n",
-    "# =========================\n",
-    "# CLASSIFICATION HEAD\n",
-    "# =========================\n",
-    "# Custom classification head on top of the pretrained backbone\n",
-    "inputs = base_model.input\n",
-    "x = base_model.output\n",
+    "    # --- 4. Evaluation ---\n",
+    "    print(\"\\nEvaluating on Test Set...\")\n",
+    "    loss, accuracy = model.evaluate(test_data)\n",
+    "    print(f\"Test Loss: {loss:.4f}, Test Accuracy: {accuracy:.4f}\")\n",
     "\n",
-    "# Global Average Pooling reduces spatial dimensions\n",
-    "x = keras.layers.GlobalAveragePooling2D()(x)\n",
+    "    # --- 5. Save model ---\n",
+    "    os.makedirs(\"models\", exist_ok=True)\n",
+    "    model.save(MODEL_PATH)\n",
+    "    print(f\"Model saved to {MODEL_PATH}\")\n",
     "\n",
-    "# Dropout for regularization\n",
-    "x = keras.layers.Dropout(0.3)(x)\n",
+    "    # --- 6. Training curves visualization ---\n",
+    "    fig, ax1 = plt.subplots(figsize=(10, 6))\n",
     "\n",
-    "# Final classification layer\n",
-    "outputs = keras.layers.Dense(101, activation=\"softmax\")(x)\n",
+    "    ax1.set_xlabel(\"Epoch\")\n",
+    "    ax1.set_ylabel(\"Accuracy\", color=\"tab:blue\")\n",
+    "    ax1.plot(history.history[\"accuracy\"], label=\"Train Acc\", color=\"tab:blue\", linewidth=2)\n",
+    "    ax1.plot(history.history[\"val_accuracy\"], label=\"Val Acc\", color=\"tab:cyan\", linestyle=\"--\")\n",
+    "    ax1.tick_params(axis=\"y\", labelcolor=\"tab:blue\")\n",
     "\n",
-    "# Build the full model\n",
-    "model = keras.models.Model(inputs=inputs, outputs=outputs)\n",
+    "    ax2 = ax1.twinx()\n",
+    "    ax2.set_ylabel(\"Loss\", color=\"tab:red\")\n",
+    "    ax2.plot(history.history[\"loss\"], label=\"Train Loss\", color=\"tab:red\", alpha=0.5)\n",
+    "    ax2.plot(history.history[\"val_loss\"], label=\"Val Loss\", color=\"tab:orange\", linestyle=\"--\")\n",
+    "    ax2.tick_params(axis=\"y\", labelcolor=\"tab:red\")\n",
     "\n",
-    "\n",
-    "# =========================\n",
-    "# MODEL COMPILATION\n",
-    "# =========================\n",
-    "model.compile(\n",
-    "    loss=\"categorical_crossentropy\",\n",
-    "    optimizer=optimizer,\n",
-    "    metrics=[\"accuracy\"]\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# =========================\n",
-    "# TRAINING\n",
-    "# =========================\n",
-    "# Train only the classification head while keeping the backbone frozen\n",
-    "history = model.fit(\n",
-    "    train_generator,\n",
-    "    epochs=10,\n",
-    "    validation_data=val_generator \n",
-    ")\n",
-    "\n",
-    "\n",
-    "# =========================\n",
-    "# EVALUATION\n",
-    "# =========================\n",
-    "# Evaluate model performance on unseen test data\n",
-    "model.evaluate(X_test, Y_test)\n",
-    "\n",
-    "# Display model architecture summary\n",
-    "model.summary()\n",
-    "\n",
-    "\n",
-    "# =========================\n",
-    "# LEARNING CURVES\n",
-    "# =========================\n",
-    "fig, ax1 = plt.subplots()\n",
-    "\n",
-    "color = 'tab:blue'\n",
-    "ax1.set_xlabel('Epoch')\n",
-    "ax1.set_ylabel('Accuracy', color=color)\n",
-    "ax1.plot(history.history[\"accuracy\"], label=\"Train Acc\", color='tab:blue')\n",
-    "ax1.plot(history.history[\"val_accuracy\"], label=\"Val Acc\", color='tab:cyan')\n",
-    "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "ax2 = ax1.twinx()  \n",
-    "color = 'tab:red'\n",
-    "ax2.set_ylabel('Loss', color=color)\n",
-    "ax2.plot(history.history[\"loss\"], label=\"Train Loss\", color='tab:red')\n",
-    "ax2.plot(history.history[\"val_loss\"], label=\"Val Loss\", color='tab:orange')\n",
-    "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "plt.title(\"Learning Curve – ResNet50 Baseline\")\n",
-    "fig.legend(loc=\"upper right\", bbox_to_anchor=(1,1), bbox_transform=ax1.transAxes)\n",
-    "plt.show()\n",
-    "\n"
+    "    plt.title(\"Steel Defect Detection: ResNet-50 Transfer Learning\")\n",
+    "    fig.legend(loc=\"upper right\", bbox_to_anchor=(0.9, 0.9))\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b031812d-4e8d-4c20-ab5b-7e4002b3b078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ")"
    ]
   }
  ],
