--- a/notebooks/model_from_scratch.ipynb
+++ b/notebooks/model_from_scratch.ipynb
@@ -20,7 +20,7 @@
     "from src.data_pipeline import DataPipeline\n",
     "\n",
     "# --- Configuration ---\n",
-    "MODEL_PATH = \"models/steel_resnet_custom.h5\"\n",
+    "MODEL_PATH = \"models/steel_resnet_custom.keras\"\n",
     "ZIP_PATH = \"data/dataset.zip\"\n",
     "EXTRACT_PATH = \"data/steel_data\"\n",
     "IMG_SIZE = (200, 200)\n",
